# research-devops

./: .gitignore  .gitmodules  README.md  docker-compose.yml  nfs-pv.yaml  research-devops.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish-mlflow_model_serve.yml  docker-publish-moga_tracking-frontend.yml  docker-publish-moga_tracking.yml
grpc/: pyproject.toml
mlflow_model_serve/: .python-version  Dockerfile  Dockerfile.test  README.md  api.http  download_registered_model.py  pyproject.toml  requirements.txt
mlflow_model_serve/api/: main.py
mlflow_model_serve/tests/: 000101001162163164.npy  test_api.py
mlflow_server/: README.md  README.rst  mlflow-server.sh  mlflow-tracking.service  pyproject.toml
mlflow_server/tests/: test_mlflow_server.py
moga_tracking/: README.md
moga_tracking/backend/: .env.production  .gitignore  Dockerfile  pyproject.toml
moga_tracking/backend/moga_tracking/: __main__.py  typing.py  utils.py
moga_tracking/backend/moga_tracking/routers/: mlflow.py  nacre.py
moga_tracking/frontend/: .dockerignore  .env  .env.development  .env.production  Dockerfile  README.md  default.conf  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
moga_tracking/frontend/src/: App.vue  env.d.ts  index.css  main.ts  routes.ts  slider.d.ts
moga_tracking/frontend/src/components/: NacrePreview.vue
moga_tracking/frontend/src/layouts/: default.vue  spotlight.vue  themeSelect.vue
moga_tracking/frontend/src/pages/: db.vue  docs.vue  home.vue  index.vue  moga.vue
moga_tracking/frontend/src/pages/db/: [id].vue
moga_tracking/frontend/src/pages/design_space/: index.vue
moga_tracking/frontend/src/pages/moga/: [runId].vue  index.vue
moga_tracking/frontend/src/providers/: index.ts
moga_tracking/frontend/src/types/: api.ts  form.ts  nacre.ts
moga_tracking/frontend/src/utils/: api.ts  constants.ts  index.ts  themes.ts
moga_tracking/frontend/src/utils/api/: index.ts  models.ts
pytorch-notebook/cpu/: Dockerfile
rainforest-notebook/cpu/: Dockerfile
