[tool.poetry]
name = "mlflow_model_serve"
version = "0.1.0"
description = ""
authors = ["Rainforest Cheng <rainforestnick@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
python-multipart = "^0.0.5"
research = {git = "https://github.com/r08521610/research.git", rev = "0.0.13", extras = ["vit", "hydra"]}
mlflow = "^1.23.0"
boto3 = "^1.20.42"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
