[tool.poetry]
name = "mlflow_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mlflow = "^1.20.2"
psycopg2-binary = "^2.9.1"
pysftp = "^0.2.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
boto3 = "^1.18.48"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
